[tool.poetry]
name = "native-photo-organiser"
version = "0.1.0"
description = ""
authors = ["Michalis Palaiokostas <mpalaiokostas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
